--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,6 +3,13 @@
   <%=h @page.title %>
 </p>
 
+<% for chapter in @page.chapters %>
+    <li><%=h chapter.title2%></li>
+    <li><%=h chapter.description%></li>
+    <li><%=h chapter.image_url%></li>
+  <% end %>
+
+
 
 <%= link_to 'Edit', edit_page_path(@page) %> |
 <%= link_to 'Back', pages_path %>
