--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :title %>
   </p>
   <p>
+    <%= f.label :picture_folder %><br />
+    <%= f.text_field :picture_folder %>
+  </p>
+  <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
