--- a/app/views/liste/index.html.erb
+++ b/app/views/liste/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Liste#index</h1>
-<p>Find me in app/views/liste/index.html.erb</p>
+<h2>Menu : </h2>
+
+  <% @pages.each do |page| %>
+    <li><%= link_to page.title, page %></li>
+  <% end %> 
+
