--- a/app/views/layouts/liste.html.erb
+++ b/app/views/layouts/liste.html.erb
@@ -1,29 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr"
+lang="fr">
 
-<html>
 <head>
-    <title>Site des sominona</title>
-    <%= stylesheet_link_tag "liste", :media => "all" %>
+	<title>Site des sominona</title>
+	<%= stylesheet_link_tag "liste", :media => "all" %>
 </head>
 <body>
-<div id="conteneur">
-    <h1 id="header"><a href="index.html">Sominona</a></h1>
-    <ul id="menu">
-     <h2>Menu : </h2>
-
-  <% @pages.each do |page| %>
-    <li><%= link_to page.title,:controller => "liste", :action => "show", :id => page.id %></li>
-  <% end %> 
-
-   
-         
-         
+	<div id="conteneur">
+  	
+		<h1 id="header"><a href="index.html">Sominona</a></h1>
+  	
+		<ul id="menu">
+    	<h2>Menu : </h2>
+    		<% @pages.each do |page| %>
+    			<li><%= link_to page.title,:controller => "liste", :action => "show", :id => page.id %></li>
+    		<% end %> 
     </ul>
+    
     <div id="contenu">
     
     <%= yield :layout %>
     
     </div>
+    
     <p id="footer"></p>
-</div>
+
+    </div>
 </body></html>
