--- a/app/views/liste/show.html.erb
+++ b/app/views/liste/show.html.erb
@@ -1,20 +1,20 @@
 
-<br /> <h3><%=h @page.title %></h3> <br />
+<h3><%=h @page.title %></h3> 
 
 <% @chapters.each do |chapter| %>
 
  	<%  @chap_title %>
 
 	<% if !chapter.title2.blank? -%>
-  	<br /> <br /><big> <big><%=h chapter.title2%></big> </big><br /><br />
+  	<br /><br /> <big> <big><%=h chapter.title2%></big> </big> <br /><br />
   <%end -%>
 
   <% if !chapter.description.blank? -%>
-  	<%=h chapter.description%> <br /><br />
+  	<p>&nbsp; <%= chapter.description%> </p>
   <%end -%>
    
   <% if !chapter.image_url.blank? -%>
-  	<a href="<%= @link_image + chapter.image_url %>" ><%=image_tag @link_image + "r_" + chapter.image_url, :style => "border: 0px solid ;" %></a>
+  	<a href="<%=  @link_image + chapter.image_url %>" ><%=image_tag @link_image + "r_" + chapter.image_url, :style => "border: 0px solid ;" %></a>
   <%end -%>
    
 <% end %> 
